infra/configs/grafana-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`grafana.wilsonfi.dev`)
      kind: Rule
      services:
        - name: vmks-grafana
